# lavaplayer-natives-fork

./: .gitignore  build.gradle
gradle/wrapper/: gradle-wrapper.properties
natives/: CMakeLists.txt  build.gradle  natives.gradle
natives-publish/: build.gradle
natives-publish/src/main/resources/natives/darwin-aarch64/: libconnector.dylib
natives/connector/: CMakeLists.txt
natives/fdk-aac/: CMakeLists.txt
natives/samplerate/: CMakeLists.txt  config.h
natives/vorbis/: CMakeLists.txt
